# mahaclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fly.toml  latest-authority-manifest.json  nadi_outbox.json  pyproject.toml
.github/ISSUE_TEMPLATE/: federation-join.yml
.github/workflows/: ci.yml  federation-discovery.yml  federation-heartbeat.yml  publish-authority-feed.yml  sync-agent-card.yml  sync-federation-descriptor.yml
.well-known/: agent-federation.json  agent.json
bundles/ada9d51870b566d10e07cc9ddf2278c79b5ef9d0/: source-authority-bundle.json
data/federation/: authority-descriptor-seeds.json
docs/: buddhi-audit.md  federation-audit.md  maha-claw-architecture.md  sankhya-map.md
docs/authority/: capabilities.json  (+1 more)
mahaclaw/: __init__.py  __main__.py  ahamkara.py  buddhi.py  cetana.py  chat.py  chitta.py  cli.py  daemon.py  envelope.py  gateway.py  inbox.py  intercept.py  ksetrajna.py  llm.py  lotus.py  manas.py  narasimha.py  pada.py  pani.py  payu.py  rama.py  rasa.py  rasana.py  runtime.py  session.py  tattva.py  upastha.py  vedana.py
openclaw_skill/: HEARTBEAT.md  SKILL.md
scripts/: discover_federation_peers.py  export_authority_feed.py  federation_utils.py  fetch_peer_authority.py  nadi_send.py  quickstart.py  render_agent_card.py  render_federation_descriptor.py  setup.sh  setup_node.py  test_roundtrip.sh
tests/: test_anauralia.py  test_buddhi_antahkarana.py  test_elements.py  test_federation.py  test_gateway_integration.py  test_mahaclaw.py  test_manas_compat.py  test_pani_chitta.py  test_runtime.py  test_vertical.py
(+17 files in other folders)
