[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mahaclaw"
version = "0.1.0"
description = "Your own personal AI assistant — the steward way"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
